--- a/ODE.ipynb
+++ b/ODE.ipynb
@@ -1181,6 +1181,19 @@
     "plt.savefig(\"report_modeling5.pdf\", bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References:\n",
+    "\n",
+    "https://sevent-christina.medium.com/deep-learning-solves-differential-equations-better-than-any-other-numerical-method-14126c7a2a7c\n",
+    "\n",
+    "https://compphysics.github.io/MachineLearning/doc/LectureNotes/_build/html/chapter11.html\n",
+    "\n",
+    "https://github.com/ComputationalDomain/PINNs/blob/main/ODE_Neural_Networks.ipynb"
+   ]
   }
  ],
  "metadata": {
